renamed: getUuid -> getUUID
also, replace List.of() / Map.of() with
Collections.empty* I