@@ -8,6 +8,7 @@ import jakarta.xml.bind.annotation.XmlType;
 import org.w3c.dom.Element;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
@@ -25,7 +26,7 @@ public class Other implements Copyable<Other> {
 	// region getters
 
 	public List<Object> getAny() {
-		return any != null ? any : List.of();
+		return any != null ? any : Collections.emptyList();
 	}
 
 	// endregion
