@@ -11,6 +11,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -51,7 +52,9 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public List<Ref> getPrecedingVersions() {
-		return precedingVersions != null ? precedingVersions : List.of();
+		return precedingVersions != null
+			? precedingVersions
+			: Collections.emptyList();
 	}
 
 	public String getUri() {
