@@ -13,6 +13,7 @@ import org.openlca.ilcd.commons.LangString;
 import org.openlca.ilcd.util.Val;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
@@ -40,7 +41,7 @@ public class ReferenceFlowProperty implements Copyable<ReferenceFlowProperty> {
 	// region getters
 
 	public List<LangString> getName() {
-		return name != null ? name : List.of();
+		return name != null ? name : Collections.emptyList();
 	}
 
 	public String getDefaultUnit() {
